# laser_scanner

./: .clang-format  .gitignore  CMakeLists.txt  DESIGN_OVERVIEW.md  DESIGN_OVERVIEW_PART2.md  README.md  build.bat  pipeline.yaml
blocks/data_generation/: csv_source.cpp  csv_source.hpp  data_generation_block.cpp  data_generation_block.hpp  data_source.hpp  rng_source.cpp  rng_source.hpp
blocks/filter_threshold/: filter_threshold_block.cpp  filter_threshold_block.hpp
blocks/labelling/: labelling_block.cpp  labelling_block.hpp
blocks/output_logger/: output_logger_block.hpp
blocks/output_logger/defect_logger/: defect_logger.cpp
blocks/tracing_computation/: tracing_block.cpp  tracing_block.hpp
channels/: channel_base.hpp  ring_buffer.hpp
data/: gen_tests.py  sample.csv
data/tests/: all_max.csv  all_max.yaml  all_zeros.csv  all_zeros.yaml  alternating.csv  impulse.csv  linear_ramp.csv  salt_pepper_noise.csv  single_defect.csv  single_defect.yaml  sinusoidal_weave.csv  step_edge.csv  threshold_boundary.csv  vertical_stripe.csv
data/tests/expected/: all_max.csv  all_zeros.csv  single_defect.csv
include/: block.hpp  block_factory.hpp  metrics.hpp  pipeline_config.hpp  ring_buffer.hpp
src/: block.cpp  block_factory.cpp  main.cpp  metrics_logger.cpp  orchestrator.cpp  orchestrator.hpp
